--- a/WeiboKeywordSpiderbyTime.ipynb
+++ b/WeiboKeywordSpiderbyTime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
@@ -611,7 +611,7 @@
     "if __name__ == '__main__':\n",
     "    username = \"17064888409\" #用户名username\n",
     "    password = \"rw297421\" #密码password        \n",
-    "    keyword = ['同居']\n",
+    "    keyword = ['婚']\n",
     "    target_year = 2019\n",
     "    target_month = 12\n",
     "    target_page_per_day = 3\n",
@@ -628,23 +628,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "484\n",
-      "484\n",
-      "484\n",
-      "484\n",
-      "484\n",
-      "484\n",
-      "484\n",
-      "484\n",
-      "484\n",
-      "484\n"
+      "567\n",
+      "567\n",
+      "567\n",
+      "567\n",
+      "567\n",
+      "567\n",
+      "567\n",
+      "567\n",
+      "567\n",
+      "567\n"
      ]
     }
    ],
@@ -665,75 +665,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_2012_1 = data\n",
-    "df_2012_1 = pd.DataFrame(data_2012_1)\n",
-    "df_2012_1.to_csv(r'data/2019/df_2019_1.csv', index = False, header=True)"
+    "import os\n",
+    "\n",
+    "path = \"data_marriage/2019\"\n",
+    "\n",
+    "os.makedirs(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_2012_2 = data\n",
-    "df_2012_2 = pd.DataFrame(data_2012_2)\n",
-    "df_2012_2.to_csv(r'data/2019/df_2019_2.csv', index = False, header=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_2012_3 = data\n",
-    "df_2012_3 = pd.DataFrame(data_2012_3)\n",
-    "df_2012_3.to_csv(r'data/2019/df_2019_3.csv', index = False, header=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_2012_4 = data\n",
-    "df_2012_4 = pd.DataFrame(data_2012_4)\n",
-    "df_2012_4.to_csv(r'data/2019/df_2019_4.csv', index = False, header=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_2012_5 = data\n",
-    "df_2012_5 = pd.DataFrame(data_2012_5)\n",
-    "df_2012_5.to_csv(r'data/2019/df_2019_5.csv', index = False, header=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_2012_6 = data\n",
-    "df_2012_6 = pd.DataFrame(data_2012_6)\n",
-    "df_2012_6.to_csv(r'data/2019/df_2019_6.csv', index = False, header=True)"
+    "df_2019_1 = pd.DataFrame(data)\n",
+    "df_2019_1.to_csv(r'data_marriage/2019/df_2019_1.csv', index = False, header=True)"
    ]
   },
   {
@@ -742,20 +692,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_2012_7 = data\n",
-    "df_2012_7 = pd.DataFrame(data_2012_7)\n",
-    "df_2012_7.to_csv(r'data/2019/df_2019_7.csv', index = False, header=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_2012_8 = data\n",
-    "df_2012_8 = pd.DataFrame(data_2012_8)\n",
-    "df_2012_8.to_csv(r'data/2019/df_2019_8.csv', index = False, header=True)"
+    "df_2019_2 = pd.DataFrame(data)\n",
+    "df_2019_2.to_csv(r'data_marriage/2019/df_2019_2.csv', index = False, header=True)"
    ]
   },
   {
@@ -764,20 +702,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_2010_9 = data\n",
-    "df_2010_9 = pd.DataFrame(data_2010_9)\n",
-    "df_2010_9.to_csv(r'data/2019/df_2019_9.csv', index = False, header=True)"
+    "df_2019_3 = pd.DataFrame(data)\n",
+    "df_2019_3.to_csv(r'data_marriage/2019/df_2019_3.csv', index = False, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_2010_10 = data\n",
-    "df_2010_10 = pd.DataFrame(data_2010_10)\n",
-    "df_2010_10.to_csv(r'data/2019/df_2019_10.csv', index = False, header=True)"
+    "df_2019_4 = pd.DataFrame(data)\n",
+    "df_2019_4.to_csv(r'data_marriage/2019/df_2019_4.csv', index = False, header=True)"
    ]
   },
   {
@@ -786,22 +722,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_2010_11 = data\n",
-    "df_2010_11 = pd.DataFrame(data_2010_11)\n",
-    "df_2010_11.to_csv(r'data/2019/df_2019_11.csv', index = False, header=True)"
+    "df_2019_5 = pd.DataFrame(data)\n",
+    "df_2019_5.to_csv(r'data_marriage/2019/df_2019_5.csv', index = False, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2019_6 = pd.DataFrame(data)\n",
+    "df_2019_6.to_csv(r'data_marriage/2019/df_2019_6.csv', index = False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2019_7 = pd.DataFrame(data)\n",
+    "df_2019_7.to_csv(r'data_marriage/2019/df_2019_7.csv', index = False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2019_8 = pd.DataFrame(data)\n",
+    "df_2019_8.to_csv(r'data_marriage/2019/df_2019_8.csv', index = False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2019_9 = pd.DataFrame(data)\n",
+    "df_2019_9.to_csv(r'data_marriage/2019/df_2019_9.csv', index = False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2019_10 = pd.DataFrame(data)\n",
+    "df_2019_10.to_csv(r'data_marriage/2019/df_2019_10.csv', index = False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2019_11 = pd.DataFrame(data)\n",
+    "df_2019_11.to_csv(r'data_marriage/2019/df_2019_11.csv', index = False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "data_2012_12 = data\n",
-    "df_2012_12 = pd.DataFrame(data_2012_12)\n",
-    "df_2012_12.to_csv(r'data/2019/df_2019_12.csv', index = False, header=True)"
+    "df_2019_12 = pd.DataFrame(data)\n",
+    "df_2019_12.to_csv(r'data_marriage/2019/df_2019_12.csv', index = False, header=True)"
    ]
   },
   {
